--- a/github-get-subfolder/pom.xml
+++ b/github-get-subfolder/pom.xml
@@ -48,6 +48,12 @@
 		</dependency>
 		
 		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-test</artifactId>
+		    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
 		    <groupId>org.zeroturnaround</groupId>
 		    <artifactId>zt-zip</artifactId>
 		    <version>1.13</version>
